compile.txt
  CHK     include/config/kernel.release
  CHK     include/generated/uapi/linux/version.h
  CHK     include/generated/utsrelease.h
  DESCEND  objtool
  CHK     scripts/mod/devicetable-offsets.h
  CHK     include/generated/bounds.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
  CHK     include/generated/compile.h
  CC      kernel/sched/dummy.o
kernel/sched/dummy.c: In function ‘task_tick_dummy’:
kernel/sched/dummy.c:135:31: error: incompatible types when initializing type ‘struct list_head *’ using type ‘struct list_head’
  struct list_head *dummy_rq = rq->dummy.p131;
                               ^~
kernel/sched/dummy.c:149:6: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
      int prio = task->prio;
      ^~~
kernel/sched/dummy.c:152:7: error: implicit declaration of function ‘setpriority’ [-Werror=implicit-function-declaration]
       setpriority(PRIO_PROCESS, 0, (prio - FIRST_PRIORITY + FIRST_PRIORITY_NICE) - 1);
       ^~~~~~~~~~~
cc1: some warnings being treated as errors
scripts/Makefile.build:316: recipe for target 'kernel/sched/dummy.o' failed
make[2]: *** [kernel/sched/dummy.o] Error 1
scripts/Makefile.build:575: recipe for target 'kernel/sched' failed
make[1]: *** [kernel/sched] Error 2
Makefile:1019: recipe for target 'kernel' failed
make: *** [kernel] Error 2
make: *** Waiting for unfinished jobs....
